--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import
-  url('https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700,700i&subset=cyrillic');
+  url('https://fonts.googleapis.com/css?family=Merriweather:400,400i,700&subset=cyrillic');
 
 body {
   padding: 0 10px;
