--- a/css/style.css
+++ b/css/style.css
@@ -16,22 +16,40 @@ body {
   align-items: center;
 }
 
+.container.bottom {
+  background-color: #eb5f10;
+}
+
 .main-header,
 .education,
 .jobs,
-.hobby {
+.hobby,
+.portfolio,
+.main-footer {
   display: flex;
   flex: 0 1 880px;
   flex-direction: column;
 }
 
 .main-header {
-  margin: 4em auto;
+  margin: 4em auto 2.2em;
 }
 
 .education,
-.jobs {
+.jobs,
+.portfolio,
+.main-footer {
   margin: 0 auto 3.6em;
+}
+
+.main-footer {
+  flex-direction: row;
+  color: #ffffff;
+  padding-top: 1em;
+}
+
+.portfolio {
+  margin-top: -1.8em;
 }
 
 .hobby {
@@ -219,8 +237,78 @@ body {
   margin-left: 1em;
 }
 
+/*---Футер---*/
 
-@media (max-width: 420px) {
+.main-footer a {
+  color: inherit;
+}
+
+.main-footer a:hover,
+.main-footer a:focus {
+  opacity: 0.5;
+}
+
+.main-footer a:active {
+  color: #000000;
+}
+
+.link {
+  margin-left: 1em;
+  margin-right: 2em;
+}
+
+.copyright {
+  margin-left: auto;
+  margin-right: 1em;
+}
+
+/*---Портфолио---*/
+
+.name a {
+  display: inline-block;
+  color: inherit;
+  background-color: #ffffff;
+  text-decoration: none;
+  box-shadow: 0 1px 0 0 #cccccc;
+}
+
+.name a:hover,
+.name a:focus {
+  box-shadow: 0 1px 0 0 #eb5f10;
+}
+
+.name a:active {
+  box-shadow: 0 1px 0 0 #ffffff;
+}
+
+.gallery {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.gallery-item {
+  flex: 0 1 32%;
+  min-width: 200px;
+  margin-bottom: 1vh;
+}
+
+.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+@media all and (max-width: 660px) {
+  .gallery-item {
+    flex: 0 1 49%;
+  }
+}
+
+@media all and (max-width: 440px) {
   body {
     font-size: 14px;
   }
@@ -248,10 +336,14 @@ body {
   }
 
   .name {
-    font-size: 3.6em;
+    font-size: 3.2em;
   }
 
   .year {
     padding: 0 0.5em;
+  }
+
+  .gallery-item {
+    flex: 0 1 100%;
   }
 }
